# lbm

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  benchmark.py  lid-driven-stationary.py  problem-size.py  run.job  run.py  shear-wave.py  shearwave-video.py
docs/: aos-packing5.qmd  eval_scaling.py  index.html  index.qmd  lbm.html  mpi-comm2.qmd  mpi-comm4.qmd  packing.qmd  packing3.qmd  packing4.qmd  problem-scaling-res.py  soa-packing4.qmd
presentation/: aos-packing2.qmd  aos-packing3.qmd  aos-packing4.qmd  custom.scss  decays.js  eval_scaling.py  generate_mpi_grid.py  generate_packing.py  lbm.html  lbm.qmd  minimal-taichi.py  mpi-comm.qmd  mpi-comm2.qmd  mpi-comm3.qmd  packing2.qmd  scaling_a100.csv  soa-packing.qmd  soa-packing2.qmd  soa-packing3.qmd  soa-packing5.qmd
presentation/lbm_files/libs/bootstrap/: bootstrap-c85d113e527720142219cef589faf606.min.css
results/: 3060Ti.txt  A100.txt  H100.txt  MI300A.txt
src/: global.h  init.cpp  init.h  io.cpp  io.h  macros.h  main.cpp  pull-push.cpp  pull-push.h
taichi/: lbm-minimal-lid-driven.py  lbm-minimal-shear-wave.py  lbm.py
